k8s/manifests/prometheus/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-route-prometheus-server
  namespace: prometheus
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: prometheus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: prometheus-server
          port: 80
